# segno

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  docrequirements.txt  noxfile.py  pyproject.toml  requirements-rtd.txt  requirements-testing.txt  requirements.rtd  requirements.testing.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  api-low-level.rst  api.rst  artistic-qrcodes.rst  boost-error-correction-level.rst  colorful-qrcodes.rst  colors.rst  command-line.rst  comparison-qrcode-libs.rst  conf.py  contact-information.rst  epc-qrcodes.rst  error-correction-boost.rst  index.rst  make.bat  make.rst  pillow-qrcodes.rst  plugins.rst  python2.rst  qrcode-modes.rst  replace-qrcode-libs.rst  requirements.txt  serializers.rst  special-qrcode-factories.rst  structured-append.rst  svg-options.rst  web-development.rst
docs/man/: index.rst  segno.rst
examples/django_qrcode/: README.rst  requirements.txt
examples/flask_qrcode/: README.rst  qrcode.py  requirements.txt
examples/logo/: README.rst  add_logo.py
examples/qrcode_text/: README.md  README.rst  png_text.py  svg_text.py
man/: segno.1
sandbox/: benchmarks.py  make_charts.py
segno/: __init__.py  __init__.pyi  cli.py  colors.py  consts.py  encoder.py  gui.py  helpers.py  helpers.pyi  moduletypes.py  utils.py  writers.py
segno/scripts/: cmd.py
tests/: alltests.py  benchmarks.py  requirements.txt  test_boosterror.py  test_cli.py  test_cli_colorful.py  test_cli_colormap.py  test_colors.py  test_covid_cert.py  test_data_uri.py  test_encode_decode.py  test_encoder.py  test_eps.py  test_hanzi.py  test_helpers.py  test_helpers_epcqr.py  test_issue124_trailing_geo_dot.py  test_issue16.py  test_issue16_boosterror.py  test_issue18.py  test_issue23_boosterror.py  test_issue3.py  test_issue32_svg2.py  test_issue33_microcode.py  test_issue34_errorlevel.py  test_issue35_maskcheck.py  test_issue39_unquoted.py  test_issue4.py  test_issue45_cli_returncodes.py  test_issue54_png_color_white_background_trans.py  test_issue54_png_greyscale.py  test_issue55_epcqr.py  test_issue65_colorful_datauris.py  test_issue71_colormap.py  test_issue72_epc_encoding_name.py  test_issue82_svg_inline.py  test_issue84_cli_encoding.py  test_issue95_wifi.py  test_issue_105_epc_slash.py  test_issue_109_bytes.py  (+36 more)
tests/feature_decompose/: iso-fig-29.txt  m2-darkmodule.txt  m2-finder-dark-and-light.txt  m2-finder-dark.txt  m2-finder-light.txt  m2-quietzone-2.txt  m2-quietzone-5.txt  m2-separator.txt  m2-timing-dark-and-light.txt  m2-timing-dark.txt  m2-timing-light.txt  v1-darkmodule.txt  v1-finder-dark-and-light.txt  v1-finder-dark.txt  v1-finder-light.txt  v1-format-dark-and-light.txt  v1-format-dark.txt  v1-format-light.txt  v1-quietzone-1.txt  v1-quietzone-4.txt  v1-separator.txt  v1-timing-dark.txt  v1-timing-light.txt  v12-alignment-dark-and-light.txt  v12-alignment-dark.txt  v12-alignment-light.txt  v6-no-version.txt  v7-version-dark-and-light.txt  v7-version-dark.txt  v7-version-light.txt
tests/issue-84/: issue-84-iso-8859-1.txt  issue-84-utf-8.txt
tests/ref/: README.txt  kanji1_m.txt  kanji2_m.txt  kanji3_m.txt  kanji4_l.txt  m_utf8_q.png.txt  (+5 more)
(+58 files in other folders)
