[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "segno"
description = "QR Code and Micro QR Code generator for Python"
dynamic = ["version"]
readme = "README.rst"
license = {file = "LICENSE"}
authors = [{"name" = "Lars Heuer", email = "heuer@semagia.com"}]
requires-python = ">=3.5"
keywords = ["QR Code", "Micro QR Code", "ISO/IEC 18004", "ISO/IEC 18004:2006(E)",
    "ISO/IEC 18004:2015(E)", "qrcode", "QR", "barcode", "matrix", "2D",]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "importlib-metadata>=3.6.0; python_version < '3.10'",
]


[project.urls]
Homepage = "https://github.com/heuer/segno/"
Documentation = "https://segno.readthedocs.io/"
"Issue tracker" = "https://github.com/heuer/segno/issues/"
Changes = "https://github.com/heuer/segno/blob/master/CHANGES.rst"


[project.scripts]
segno = "segno.cli:main"


[tool.coverage.run]
branch = true


[tool.coverage.report]
exclude_also = [
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
]

[tool.flit.external-data]
"share/man/man1" = "man/segno.1"

