[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = consts.py

[metadata]
name = segno
version = attr:segno.__version__
url = https://github.com/heuer/segno/
project_urls =
    Homepage = https://github.com/heuer/segno/
    Documentation = https://segno.readthedocs.io/
    Code = https://github.com/heuer/segno/
    Issue tracker = https://github.com/heuer/segno/issues/
description = QR Code and Micro QR Code generator for Python 2 and Python 3
long_description: file: README.rst
long_description_content_type= text/x-rst
license = BSD-3-Clause
license-file = LICENSE
author = Lars Heuer
author_email = heuer@semagia.com
platform = any
keywords =
    QR Code, Micro QR Code, ISO/IEC 18004, ISO/IEC 18004:2006(E),
    ISO/IEC 18004:2015(E), qrcode, QR, barcode, matrix, 2D, latex
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Graphics
    Topic :: Printing
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = segno
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*

[options.data_files]
share/man/man1 =
    man/segno.1

[options.entry_points]
console_scripts =
    segno = segno.cli:main
